I am changing the sentence

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ nav ul a:hover{
         <div class="leftSection">
             Oh, hello! 
             <div>I'm <span class="blue">Sonali Srivastava</span> </div>
-            <div>and, I am a passionate </div> 
+            <div>and, I am a passionate Trying</div> 
             <span id="element"></span>
               
         </div>
